--- a/src/sidemd.css
+++ b/src/sidemd.css
@@ -107,7 +107,6 @@
 }
 .side .md h3+ul a {
     display: inline-block;
-    color: #ccc;
     padding: 6px 8px;
     margin-top: 10px;
     border-radius: 3px
