--- a/src/tagline.css
+++ b/src/tagline.css
@@ -65,10 +65,10 @@
     position: absolute;
     padding: 3px 0 0 45px!important;
     font-weight: 700;
-    color: #48f;
     white-space: nowrap;
     box-sizing: border-box;
-    margin: 0
+    margin: 0;
+    color: #03C
 }
 
 /* ensure transparent background (override RES user highlighter) */
