--- a/unmin.css
+++ b/unmin.css
@@ -1002,10 +1002,10 @@ body #header .tabmenu li:last-of-type a {
     position: absolute;
     padding: 3px 0 0 45px!important;
     font-weight: 700;
-    color: #48f;
     white-space: nowrap;
     box-sizing: border-box;
-    margin: 0
+    margin: 0;
+    color: #03C
 }
 
 /* ensure transparent background (override RES user highlighter) */
@@ -2352,7 +2352,6 @@ html[lang$=nm] .side .md h1:first-of-type a:first-child {
 }
 .side .md h3+ul a {
     display: inline-block;
-    color: #ccc;
     padding: 6px 8px;
     margin-top: 10px;
     border-radius: 3px
@@ -3600,6 +3599,9 @@ html.res .res-fancy-toggle-button {
     left: -36px;
     top: 3px
 }
+.side .md h3+ul a {
+    color: #777;
+}
 
 /* submission filters
 --------------------------------------------------------------------------------*/
@@ -3611,10 +3613,22 @@ html.res .res-fancy-toggle-button {
 
 /* side community links
 --------------------------------------------------------------------------------*/
-.side .md h6+blockquote p a {
-    background: #f3f3f3!important
+.side .md h6+blockquote p {
+    background: rgba(0,0,0,0.03);
 }
 
+.side .md h6+blockquote p a {
+    background: rgba(0,0,0,0.04);
+    color: rgba(0,0,0,0.8);
+}
+.side .md h6+blockquote p a:hover {
+    background: rgba(0,0,0,0.08);
+}
+
+.side .md h6+blockquote h4 {
+    background: rgba(0,0,0,0.04);
+    color: rgba(0,0,0,0.8);
+}
 /* sun/moon switch day mode
 --------------------------------------------------------------------------------*/
 .side .md h1:first-of-type {
@@ -3859,7 +3873,8 @@ html[lang$=nm] .thing.visited .title {
 html[lang$=nm] .flairrow .author,
 html[lang$=nm] .side .tagline .author,
 html[lang$=nm] .thing .author {
-    background-position: 0 0
+    background-position: 0 0;
+    color: #48f
 }
 
 /* spoiler overlay
@@ -4048,6 +4063,9 @@ html[lang$=nm] .side .md h3+ul+ol>li:before {
     left: -36px;
     top: 3px
 }
+html[lang$=nm] .side .md h3+ul a {
+    color: #ccc;
+}
 
 /* submission filters
 --------------------------------------------------------------------------------*/
@@ -4063,10 +4081,10 @@ html[lang$=nm] .side .md h6+blockquote p {
     background: rgba(255, 255, 255, .02)
 }
 html[lang$=nm] .side .md h6+blockquote p a {
-    background: rgba(255, 255, 255, .05)!important
+    background: rgba(255, 255, 255, .05)
 }
 html[lang$=nm] .side .md h6+blockquote p a:hover {
-    background: rgba(255, 255, 255, .12)!important
+    background: rgba(255, 255, 255, .12)
 }
 html[lang$=nm] .side .md h6+blockquote h4 {
     background: rgba(255, 255, 255, .08)
